--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -8,9 +8,12 @@
     </block>
   </swiper>
   <view class='search-view'>
-    <input class='search-input' placeholder="搜索你想要的图片" placeholder-class='input-place'></input>
+    <input class='search-input' placeholder="搜索你想要的图片" placeholder-class='input-place' bindtap='tapSearch'>
+    </input>
+    <icon type="search" size="18" class='search-icon'/>
     <button class='search-button'>分享</button>
   </view>
+  
   <view class="tab-view">
     <zan-tab scroll="true" list="{{ list }}" height="40" selected-id="1" bindtabchange="handleTabChange" />
   </view>
