--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -27,7 +27,8 @@ page {
 .search-input {
   background: white;
   opacity: 0.6;
-  width: 600rpx;
+  width: 550rpx;
+  padding-left: 50rpx;
   height: 50rpx;
   border-radius: 25rpx;
 }
@@ -48,6 +49,11 @@ page {
   font-size: 23rpx;
   line-height: 50rpx;
   color: lightseagreen;
+}
+.search-icon {
+ position: absolute;
+ margin: 10rpx;
+ margin-left: 15rpx;
 }
 
 .tab-view {
