--- a/client/pages/search/search.wxss
+++ b/client/pages/search/search.wxss
@@ -1,1 +1,97 @@
 /* pages/index/search.wxss */
+
+page {
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+
+.search-flex-view {
+  position: fixed;
+  top: 10rpx;
+  width: 750rpx;
+  display: flex;
+}
+
+.search-input {
+  background: lightgray;
+  margin-left: 10rpx;
+  padding-left: 50rpx;
+  opacity: 0.6;
+  width: 550rpx;
+  height: 50rpx;
+  border-radius: 25rpx;
+}
+
+.input-place {
+  margin-left: 15rpx;
+  font-size: 25rpx;
+  line-height: 50rpx;
+}
+
+.search-icon {
+  position: absolute;
+  margin: 10rpx;
+  margin-left: 25rpx;
+}
+
+.search-button {
+  background: lightblue;
+  opacity: 0.8;
+  width: 100rpx;
+  height: 50rpx;
+  margin-left: 10rpx;
+  border-radius: 25rpx;
+  font-size: 23rpx;
+  line-height: 50rpx;
+  color: lightseagreen;
+}
+
+.history-tab-view {
+  display: block;
+  width: 100%;
+  background-color: white;
+  margin-top: 10rpx;
+  padding-top: 20rpx;
+}
+
+.history-label {
+  width: 100%;
+  margin-left: 30rpx;
+  margin-top: 30rpx;
+  padding-left: 10rpx;
+  font-size: 28rpx;
+  line-height: 50rpx;
+  border-left: 5rpx solid gray;
+}
+
+.image-list-view {
+  margin-top: 10rpx;
+  background: white;
+  width: 100%;
+}
+
+.image-item {
+  width: 100%;
+}
+
+.load-button-view {
+  width: 100%;
+  opacity: 0.8;
+  height: 100rpx;
+  margin-top: 10rpx;
+  margin-bottom: 100rpx;
+}
+
+.load-button {
+  width: 100%;
+  margin-left: 10rpx;
+  margin-right: 10rpx;
+  height: 60rpx;
+  font-size: 24rpx;
+  border-radius: 5rpx;
+  line-height: 60rpx;
+  color: lightseagreen;
+}
+
