--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -20,8 +20,9 @@ page {
 
 .search-view {
   position: absolute;
-  top: 10rpx;
-  left: 10rpx;
+  top: 0rpx;
+  left: 0rpx;
+  padding:10rpx;
   display: flex;
 }
 
@@ -30,25 +31,25 @@ page {
   opacity: 0.6;
   width: 550rpx;
   padding-left: 50rpx;
-  height: 50rpx;
-  border-radius: 25rpx;
+  height: 60rpx;
+  border-radius: 30rpx;
 }
 
 .input-place {
-  margin-left: 15rpx;
-  font-size: 25rpx;
-  line-height: 50rpx;
+  margin-left: 20rpx;
+  font-size: 26rpx;
+  line-height: 60rpx;
 }
 
 .search-button {
   background: lightblue;
   opacity: 0.8;
-  width: 100rpx;
-  height: 50rpx;
+  width: 120rpx;
+  height: 60rpx;
   margin-left: 10rpx;
-  border-radius: 25rpx;
-  font-size: 23rpx;
-  line-height: 50rpx;
+  border-radius: 30rpx;
+  font-size: 24rpx;
+  line-height: 60rpx;
   color: lightseagreen;
 }
 
@@ -58,14 +59,19 @@ page {
   margin-left: 15rpx;
 }
 
-.tab-view {
+
+.tab-container{
+  background-color: white;
+}
+
+.tab-container .tab-view {
   margin-top: 20rpx;
   border-bottom: 1rpx solid rgba(0, 0, 0, 0.1);
 }
 
 .image-list-view {
   margin-top: 10rpx;
-  background: #f6f6f6;
+  background: white;
   width: 100%;
   padding: 0rpx;
   padding-bottom: 0rpx;
@@ -76,8 +82,8 @@ page {
 }
 
 .load-button-view {
-  width: 100%;
   opacity: 0.8;
+  width: 650rpx;
   height: 100rpx;
   margin-top: 10rpx;
   padding-left: 50rpx;
@@ -88,8 +94,33 @@ page {
 .load-button {
   width: 100%;
   height: 60rpx;
+  padding: 0 10rpx;
   font-size: 24rpx;
   border-radius: 5rpx;
   line-height: 60rpx;
   color: lightseagreen;
+}
+
+
+.menu-container{
+  background: white;
+  width: 750rpx;
+  margin-bottom: 15rpx;
+  display: flex;
+}
+
+.menu-view{
+  width: 20%;
+   text-align: center;
+   display: block;
+}
+.menu-image{
+  width: 120rpx;
+  height: 120rpx;
+  margin: auto;
+}
+.menu-label{
+  width: 100%;
+  color: gray;
+  line-height: 40rpx;
 }
