--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -64,7 +64,7 @@ page {
   background-color: white;
 }
 
-.tab-container .tab-view {
+.tab-view {
   margin-top: 20rpx;
   border-bottom: 1rpx solid rgba(0, 0, 0, 0.1);
 }
