--- a/client/pages/item/item.wxss
+++ b/client/pages/item/item.wxss
@@ -1,1 +1,12 @@
 /* pages/index/item.wxss */
+
+page {
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+
+/*import font icon*/
+@import "/utils/font-icon.wxss";
