--- a/client/pages/item/item.wxml
+++ b/client/pages/item/item.wxml
@@ -1,6 +1,21 @@
 <view class="container">
-  <view>
-  
+  <image src='{{image.url}}' class='main-image' mode='widthFix'></image>
+  <view class='main-icon-view'>
+    <text class="fa fa-thumbs-o-up icon-item" />
+    <text class="fa fa-heart-o icon-item" />
+    <text class="fa fa-cloud-download icon-item" />
+    <text class="fa fa-share-square-o icon-item" />
   </view>
+
+  <view class='similar-view'>
+    <label class='similar-view-label'>相似图片</label>
+    <view>
+      <block wx:for="{{similar}}">
+        <image class='similar-image' src='{{item.url}}' mode='widthFix'></image>
+      </block>
+    </view>
+
+  </view>
+
 
 </view>
