--- a/client/pages/collector/collector.wxss
+++ b/client/pages/collector/collector.wxss
@@ -1,1 +1,29 @@
 /* pages/collector/collector.wxss */
+page {
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+.main-view{
+  margin-top: 20rpx;
+}
+.image-item{
+  width: 177.5rpx;
+  height: 177.5rpx;
+  display: inline-block;
+  margin: 5rpx;
+}
+.text-view{
+ background: transparent;
+ text-align: center;
+}
+
+.text{
+  width: 750rpx;
+  align-content: center;
+  color: gray;
+  background: transparent;
+  font-size: 30rpx;
+}
