--- a/client/pages/mine/mine.wxml
+++ b/client/pages/mine/mine.wxml
@@ -1,2 +1,57 @@
-<!--pages/mine/mine.wxml-->
-<text>pages/mine/mine.wxml</text>
+<view class="container">
+  <!-- 用户登录测试 -->
+  <view class="userinfo" bindtap="login">
+    <image class="userinfo-avatar" src="{{logged ? userInfo.avatarUrl : './user-unlogin.png'}}" background-size="cover"></image>
+    <view>
+      <text class="userinfo-nickname">{{logged ? userInfo.nickName : '登录'}}</text>
+      <text class="userinfo-nickname" wx:if="{{logged}}">{{userInfo.lastLoginTime}}</text>
+    </view>
+  </view>
+  <view class='cell-view'>
+    <zan-cell-group>
+      <zan-cell title="我的收藏" is-link="{{true}}" url="/pages/collector/collector">
+        <text slot="icon" class="fa fa-heart-o icon-item" />
+      </zan-cell>
+      <zan-cell title="分享">
+        <text slot="icon" class="fa fa-share-square-o icon-item" />
+      </zan-cell>
+      <zan-cell title="赞赏">
+        <text slot="icon" class="fa fa-thumbs-o-up icon-item" />
+      </zan-cell>
+      <zan-cell title="关闭每日推送">
+        <text slot="icon" class="fa fa-cog icon-item" />
+        <switch slot="footer" checked/>
+      </zan-cell>
+    </zan-cell-group>
+  </view>
+
+  <view class='cell-view'>
+    <zan-cell-group>
+      <zan-cell title="给我们打赏" is-link="{{true}}" url="/pages/collector/collector">
+        <text slot="icon" class="fa fa-diamond icon-item" />
+      </zan-cell>
+      <zan-cell title="关于我们">
+        <text slot="icon" class="fa fa-info-circle icon-item" />
+      </zan-cell>
+    </zan-cell-group>
+  </view>
+
+  <!-- 收藏 -->
+  <!-- <view class="uploader">
+    <navigator url="../collector/collector" open-type="navigate" class="uploader-text">
+      <label>我的收藏</label>
+    </navigator>
+  </view> -->
+  <!-- 收藏 -->
+  <!-- <view class="uploader">
+    <navigator url="../collector/collector" open-type="navigate" class="uploader-text">
+      <label>分享</label>
+    </navigator>
+    <navigator url="../collector/collector" open-type="navigate" class="uploader-text">
+      <label>赞赏</label>
+    </navigator>
+    <navigator url="../collector/collector" open-type="navigate" class="uploader-text">
+      <label>主页</label>
+    </navigator>
+  </view> -->
+</view>
