--- a/client/pages/mine/mine.wxss
+++ b/client/pages/mine/mine.wxss
@@ -1,1 +1,49 @@
 /* pages/mine/mine.wxss */
+/**index.wxss**/
+page {
+    background: #F6F6F6;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+
+/*import font icon*/
+@import "/utils/font-icon.wxss";
+
+.userinfo, .uploader, .tunnel {
+    margin-top: 40rpx;
+    height: 140rpx;
+    width: 100%;
+    background: #FFF;
+    border: 1px solid rgba(0, 0, 0, .1);
+    border-left: none;
+    border-right: none;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    transition: all 300ms ease;
+}
+
+.userinfo-avatar {
+    width: 100rpx;
+    height: 100rpx;
+    margin: 20rpx;
+    border-radius: 50%;
+}
+
+.userinfo-nickname {
+    font-size: 32rpx;
+    color: #007AFF;
+}
+
+.cell-view{
+  width: 100%;
+  margin-top: 40rpx;
+  background: white;
+}
+
+.icon-item{
+  color: lightskyblue;
+   font-size: 30rpx; 
+}
+
