--- a/client/pages/picset/picset.wxss
+++ b/client/pages/picset/picset.wxss
@@ -1,1 +1,22 @@
 /* pages/picset/picset.wxss */
+page {
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  overflow: hidden;
+}
+
+.image-item{
+  width: 100%;
+  margin-top:20rpx;
+}
+
+.image-text{
+  height: 50rpx;
+  width: 100%;
+  background: lightgray;
+  opacity: 0.6;
+  font-size: 30rpx;
+  align-content: left;
+}
