--- a/client/pages/index/index.wxml
+++ b/client/pages/index/index.wxml
@@ -11,7 +11,7 @@
     <input class='search-input' placeholder="搜索你想要的图片" placeholder-class='input-place' bindtap='tapSearch' disabled='true'>
     </input>
     <icon type="search" size="18" class='search-icon' />
-    <button class='search-button'>分享</button>
+    <button class='search-button'  open-type="getUserInfo"  bindgetuserinfo="bindGetUserInfo">分享</button>
   </view>
 
   <view class='menu-container'>
