--- a/client/pages/mine/mine.wxss
+++ b/client/pages/mine/mine.wxss
@@ -1,49 +1,62 @@
 /* pages/mine/mine.wxss */
+
 /**index.wxss**/
+
 page {
-    background: #F6F6F6;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
 }
 
 /*import font icon*/
 @import "/utils/font-icon.wxss";
 
 .userinfo, .uploader, .tunnel {
-    margin-top: 40rpx;
-    height: 140rpx;
-    width: 100%;
-    background: #FFF;
-    border: 1px solid rgba(0, 0, 0, .1);
-    border-left: none;
-    border-right: none;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    transition: all 300ms ease;
+  margin-top: 40rpx;
+  height: 140rpx;
+  width: 100%;
+  background: #fff;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-left: none;
+  border-right: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  transition: all 300ms ease;
 }
 
 .userinfo-avatar {
-    width: 100rpx;
-    height: 100rpx;
-    margin: 20rpx;
-    border-radius: 50%;
+  width: 100rpx;
+  height: 100rpx;
+  margin: 20rpx;
+  border-radius: 50%;
 }
 
 .userinfo-nickname {
-    font-size: 32rpx;
-    color: #007AFF;
+  font-size: 32rpx;
+  color: #007aff;
 }
 
-.cell-view{
+.cell-view {
   width: 100%;
   margin-top: 40rpx;
   background: white;
 }
 
-.icon-item{
+.icon-item {
   color: lightskyblue;
-   font-size: 30rpx; 
+  font-size: 30rpx;
 }
 
+.sharebutton {
+  font-size: 26rpx;
+  align-self: left;
+  text-align: left;
+  background: transparent;
+  padding-left: 0rpx;
+}
+
+button::after {
+  border: none;
+}
