--- a/client/pages/index/index.wxss
+++ b/client/pages/index/index.wxss
@@ -80,26 +80,6 @@ page {
   width: 750rpx;
 }
 
-.load-button-view {
-  opacity: 0.8;
-  width: 650rpx;
-  height: 100rpx;
-  margin-top: 10rpx;
-  padding-left: 50rpx;
-  padding-right: 50rpx;
-  margin-bottom: 100rpx;
-}
-
-.load-button {
-  width: 100%;
-  height: 60rpx;
-  padding: 0 10rpx;
-  font-size: 24rpx;
-  border-radius: 5rpx;
-  line-height: 60rpx;
-  color: lightseagreen;
-}
-
 .menu-container {
   background: white;
   width: 750rpx;
@@ -126,4 +106,17 @@ page {
   font-size: 25rpx;
   line-height: 40rpx;
   align-self: center;
+}
+
+.load-button {
+  margin-top: 10rpx;
+  width: 100%;
+  height: 70rpx;
+  padding: 0 10rpx;
+  font-size: 24rpx;
+  border-radius: 5rpx;
+  line-height: 60rpx;
+  display: flex;
+  justify-content: center;
+  color: lightseagreen;
 }
