--- a/client/pages/list/list.wxml
+++ b/client/pages/list/list.wxml
@@ -1,6 +1,6 @@
 <view class="container">
   <block wx:for="{{imgUrls}}">
-    <image src="{{item}}" class='image-item' mode='widthFix' lazy-load/>
+    <image src="{{item.url}}" class='image-item' mode='widthFix' lazy-load="true" id='{{item.id}}' bindtap='imageTap'/>
   </block>
-  <zan-button type="primary" size='small' plain='true'>加载更多.</zan-button>
+  <zan-button type="primary" size='small' plain='true' class='load-button' wx:if="{{showLoadMore}}">加载更多.</zan-button>
 </view>
