--- a/client/pages/list/list.wxss
+++ b/client/pages/list/list.wxss
@@ -11,3 +11,15 @@ page {
   width: 100%;
   margin-top:20rpx;
 }
+.load-button {
+  margin-top: 10rpx;
+  width: 100%;
+  height: 70rpx;
+  padding: 0 10rpx;
+  font-size: 24rpx;
+  border-radius: 5rpx;
+  line-height: 60rpx;
+  display: flex;
+  justify-content: center;
+  color: lightseagreen;
+}
