--- a/client/pages/mine/mine.wxml
+++ b/client/pages/mine/mine.wxml
@@ -12,26 +12,26 @@
       <zan-cell title="我的收藏" is-link="{{true}}" url="/pages/collector/collector">
         <text slot="icon" class="fa fa-heart-o icon-item" />
       </zan-cell>
-      <zan-cell title="">
-        <text slot="icon" class="fa fa-share-square-o icon-item" />
+      <zan-cell title=""  is-link="{{true}}" >
+        <text slot="icon" class="fa fa-share-square-o icon-item"/>
         <button open-type='share' class='sharebutton'>分享</button>
       </zan-cell>
-      <zan-cell title="赞赏">
+      <zan-cell title="赞赏" is-link="{{true}}">
         <text slot="icon" class="fa fa-thumbs-o-up icon-item" />
       </zan-cell>
-      <zan-cell title="关闭每日推送">
+      <zan-cell title="授权设置" is-link="{{true}}">
         <text slot="icon" class="fa fa-cog icon-item" />
-        <switch slot="footer" checked/>
+        <!-- <switch slot="footer" checked/> -->
       </zan-cell>
     </zan-cell-group>
   </view>
 
   <view class='cell-view'>
     <zan-cell-group>
-      <zan-cell title="打赏作者" bindtap="diamond">
+      <zan-cell title="打赏作者" bindtap="diamond" is-link="{{true}}">
         <text slot="icon" class="fa fa-diamond icon-item" />
       </zan-cell>
-      <zan-cell title="">
+      <zan-cell title="" is-link="{{true}}">
         <text slot="icon" class="fa fa-info-circle icon-item" />
         <button open-type="contact" class='sharebutton'>关于我们</button>
       </zan-cell>
