--- a/client/pages/collector/collector.wxss
+++ b/client/pages/collector/collector.wxss
@@ -27,3 +27,16 @@ page {
   background: transparent;
   font-size: 30rpx;
 }
+
+.login-button{
+   margin-top: 10rpx;
+  width: 100%;
+  height: 70rpx;
+  padding: 0 10rpx;
+  font-size: 24rpx;
+  border-radius: 5rpx;
+  line-height: 60rpx;
+  display: flex;
+  justify-content: center;
+  color: white;
+}
