--- a/client/pages/item/item.wxss
+++ b/client/pages/item/item.wxss
@@ -5,7 +5,7 @@ page {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /*import font icon*/
