--- a/client/pages/list/list.wxml
+++ b/client/pages/list/list.wxml
@@ -2,5 +2,5 @@
   <block wx:for="{{imgUrls}}">
     <image src="{{item.url}}" class='image-item' mode='widthFix' lazy-load="true" id='{{item.id}}' bindtap='imageTap'/>
   </block>
-  <zan-button type="primary" size='small' plain='true' class='load-button' wx:if="{{showLoadMore}}">加载更多.</zan-button>
+  <zan-button type="primary" size='small' plain='true' class='load-button' loading="{{loading}}" wx:if="{{showLoadMore}}" bindtap='loadMore'>加载更多.</zan-button>
 </view>
