--- a/client/pages/list/list.wxss
+++ b/client/pages/list/list.wxss
@@ -4,7 +4,7 @@ page {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 .image-item{
